--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId 'be.jochems.sven.servercontroller'
         minSdkVersion 16
         targetSdkVersion 20
-        versionName '1.2.1'
+        versionName '1.3'
     }
     buildTypes {
         release {
@@ -25,7 +25,7 @@ dependencies {
     // You must install or update the Support Repository through the SDK manager to use this dependency.
 
     //compile 'com.jcraft:jsch:0.1.51'
-    compile files('libs/jsch-0.1.44.jar')
+    //compile files('libs/jsch-0.1.44.jar')
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     compile 'com.android.support:support-v4:20.+'
